# discord-rpc-test

./: Cargo.toml  README.md
src/: main.rs
